Refs #27296 - Add parameter documentation for puppet6-repo

--- a/provisioning_templates/provision/kickstart_default.erb
+++ b/provisioning_templates/provision/kickstart_default.erb
@@ -19,6 +19,7 @@ This template accepts the following parameters:
 - enable-epel: boolean (default=true)
 - enable-puppetlabs-repo: boolean (default=false)
 - enable-puppetlabs-puppet5-repo: boolean (default=false)
+- enable-puppetlabs-puppet6-repo: boolean (default=false)
 - salt_master: string (default=undef)
 - ntp-server: string (default="0.fedora.pool.ntp.org")
 - bootloader-append: string (default="nofb quiet splash=quiet")
