--- a/provisioning_templates/provision/kickstart_default.erb
+++ b/provisioning_templates/provision/kickstart_default.erb
@@ -8,6 +8,7 @@ oses:
 - RedHat
 %>
 <%#
+    testing 1 2 3
 This template accepts the following parameters:
 - lang: string (default="en_US.UTF-8")
 - selinux-mode: string (default="enforcing")
